# Noah-Boids

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: boid.h  screen.h  vector2.h
src/: boid.cpp  main.cpp  screen.cpp
